# iconsetgen

./: .gitignore  CMakeLists.txt
src/: image.c  image.h  main.c
